syntax = "proto3";

import "google/protobuf/timestamp.proto";

package inventory.v1;

option go_package = "github.com/andredubov/rocket-factory/shared/pkg/proto/inventory/v1;inventory_v1";

// InventoryService отвечает за хранение и предоставление информации о деталях для сборки космических кораблей
service InventoryService {
    // Возвращает информацию о детали по её UUID
    rpc GetPart(GetPartRequest) returns (GetPartResponse);
    // Возвращает список деталей с возможностью фильтрации
    rpc ListParts(ListPartsRequest) returns (ListPartsResponse);
}

// Запрос для получения детали по UUID
message GetPartRequest {
    string uuid = 1;
}

// Ответ с информацией о детали
message GetPartResponse {
    Part part = 1;
}

// Запрос для получения списка деталей с фильтрацией
message ListPartsRequest {
    PartsFilter filter = 1;
}

// Ответ со списком деталей
message ListPartsResponse {
    repeated Part parts = 1;
}

// Фильтр для списка деталей
message PartsFilter {
    repeated string uuids = 1;                  // Список UUID'ов
    repeated string names = 2;                  // Список имён
    repeated Category categories = 3;           // Список категорий
    repeated string manufacturer_countries = 4; // Список стран производителей
    repeated string tags = 5;                   // Список тегов
}

// Категория товара
message Category {
    string id = 1;
    string name = 2;
}

// Физические размеры и вес
message Dimensions {
    double length = 1;  // Длина в см
    double width = 2;   // Ширина в см
    double height = 3;  // Высота в см
    double weight = 4;  // Вес в кг
}

// Производитель
message Manufacturer {
    string name = 1;     // Название
    string country = 2;  // Страна производства
    string website = 3;  // Сайт производителя
}

// Универсальное значение для метаданных
message Value {
    oneof kind {
        string string_value = 1;
        int64 int64_value = 2;
        double double_value = 3;
        bool bool_value = 4;
    }
}

// Основная структура детали
message Part {
    string uuid = 1;
    string name = 2;
    string description = 3;
    double price = 4;
    int64 stock_quantity = 5;
    Category category = 6;
    Dimensions dimensions = 7;
    Manufacturer manufacturer = 8;
    repeated string tags = 9;
    map<string, Value> metadata = 10;
    google.protobuf.Timestamp created_at = 11;
    google.protobuf.Timestamp updated_at = 12;
}